# Vision-Fusion-Early-Fusion-C-

./: CMakeLists.txt  README.md
include/: LiDARtoCamera.h  utils_my.h  yolo8_seg_inference.h
other/: export_onnx.py
src/: LiDARtoCamera.cpp  main.cpp  utils_my.cpp  yolo8_seg_inference.cpp
